Commit first day (7/1/19)

--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -73,6 +73,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="20dp"
                 android:background="@color/colorPrimaryDark"
+                android:elevation="40dp"
                 android:text="Sign Up"
                 android:textColor="@android:color/white"
                 app:layout_constraintStart_toStartOf="parent"
@@ -85,6 +86,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="32dp"
                 android:background="@color/colorPrimaryDark"
+                android:elevation="40dp"
                 android:text="Login"
                 android:textColor="@android:color/white"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -96,6 +98,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="24dp"
+                android:elevation="40dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
