--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,34 +10,65 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="130dp"
-        android:layout_marginEnd="32dp"
         android:layout_marginBottom="130dp"
         android:visibility="visible"
         app:cardBackgroundColor="#F0F0F0"
         app:cardCornerRadius="12dp"
         app:cardElevation="10dp"
         app:cardUseCompatPadding="true"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
         <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="292dp"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/editTextConfPass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit_text_background"
+                android:ems="10"
+                android:hint="@string/confPassword"
+                android:inputType="textPassword"
+                android:paddingLeft="8dp"
+                android:paddingTop="4dp"
+                android:paddingRight="8dp"
+                android:paddingBottom="4dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.506"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextPass" />
+
+            <EditText
+                android:id="@+id/editTextPass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit_text_background"
+                android:ems="10"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:paddingLeft="8dp"
+                android:paddingTop="4dp"
+                android:paddingRight="8dp"
+                android:paddingBottom="4dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.506"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextUser" />
 
             <EditText
                 android:id="@+id/editTextMail"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_marginTop="75dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
                 android:background="@drawable/edit_text_background"
                 android:ems="10"
                 android:hint="@string/email"
@@ -56,8 +87,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/edit_text_background"
                 android:ems="10"
-                android:hint="@string/password"
-                android:inputType="textPassword"
+                android:hint="@string/username"
+                android:inputType="text"
                 android:paddingLeft="8dp"
                 android:paddingTop="4dp"
                 android:paddingRight="8dp"
@@ -70,43 +101,16 @@
                 android:id="@+id/buttonSignUp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="19dp"
+                android:layout_marginBottom="24dp"
                 android:background="@color/colorPrimaryDark"
                 android:elevation="40dp"
                 android:text="@string/signUp"
                 android:textColor="@android:color/white"
-                app:layout_constraintBottom_toTopOf="@+id/buttonGoogleSignIn"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextUser" />
-
-            <Button
-                android:id="@+id/buttonSignIn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginBottom="8dp"
-                android:background="@color/colorPrimaryDark"
-                android:elevation="40dp"
-                android:text="@string/login"
-                android:textColor="@android:color/white"
-                app:layout_constraintBottom_toTopOf="@+id/buttonGoogleSignIn"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextUser" />
-
-            <com.google.android.gms.common.SignInButton
-                android:id="@+id/buttonGoogleSignIn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="100dp"
-                android:layout_marginBottom="24dp"
-                android:elevation="40dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextUser" />
+                app:layout_constraintTop_toBottomOf="@+id/editTextConfPass" />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
