--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,12 +18,12 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/buttonMenu1"
+            android:id="@+id/buttonMenuOrders"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="Menu1"
+            android:text="@string/orders"
             android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/buttonMenu2" />
@@ -38,7 +38,7 @@
             android:text="Menu2"
             android:textColor="@android:color/white"
             app:layout_constraintEnd_toStartOf="@+id/buttonMenu3"
-            app:layout_constraintStart_toEndOf="@+id/buttonMenu1"
+            app:layout_constraintStart_toEndOf="@+id/buttonMenuOrders"
             app:layout_constraintTop_toTopOf="@id/ConstraintLayoutMenu" />
 
         <Button
