--- a/app/src/main/res/layout/dialog_add_order.xml
+++ b/app/src/main/res/layout/dialog_add_order.xml
@@ -31,9 +31,9 @@
         android:hint="@string/title"
         android:inputType="textMultiLine|text"
         android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewAddProduct"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toEndOf="@+id/imageViewAddProduct"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
@@ -47,8 +47,8 @@
         android:inputType="textMultiLine|text"
         app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintStart_toStartOf="@+id/imageViewAddProduct"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewAddProduct" />
 
     <Button
         android:id="@+id/buttonSubmit"
@@ -75,7 +75,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextDescr" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageViewAddProduct"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_marginStart="16dp"
