More fixes added. I need to create a users DB

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,5 @@
     <color name="colorPrimary">#E53935</color>
     <color name="colorPrimaryDark">#b71c1c</color>
     <color name="colorPrimaryLight">#EF5350</color>
-    <color name="colorAccent">#1DE9B6</color>
-    #EF9A9A
-
+    <color name="colorAccent">#36C3D7</color>
 </resources>
