--- a/app/src/main/res/layout/dialog_add_order.xml
+++ b/app/src/main/res/layout/dialog_add_order.xml
@@ -7,7 +7,7 @@
     android:layout_margin="8dp">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/editTextCity"
         style="@style/Widget.AppCompat.TextView.SpinnerItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageViewAddProduct"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageViewAddProduct"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextCity" />
 
     <EditText
         android:id="@+id/editTextDescr"
@@ -83,7 +83,7 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextDescr"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/editTextCity"
         app:srcCompat="@drawable/bags" />
 
 
