--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,18 +10,19 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardViewProfileUser"
         android:layout_width="126dp"
-        android:layout_height="30dp"
+        android:layout_height="0dp"
         android:layout_marginTop="50dp"
         app:cardCornerRadius="5dp"
         app:layout_constraintEnd_toEndOf="@+id/cardViewProfileContent"
         app:layout_constraintStart_toStartOf="@+id/cardViewProfileContent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textViewUsername"
+        <EditText
+            android:id="@+id/editTextUsername"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal|center"
+            android:focusable="false"
             android:text="Marc"
             android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="17sp" />
@@ -60,23 +61,16 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/textViewAge2"
+            <EditText
+                android:id="@+id/editViewAge2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:background="@android:color/transparent"
                 android:text="19"
+                android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textViewAge1" />
-
-            <TextView
-                android:id="@+id/textViewAge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:text="Spain"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewAddress1" />
 
             <TextView
                 android:id="@+id/textViewAddress1"
@@ -90,7 +84,28 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewAge2" />
+                app:layout_constraintTop_toBottomOf="@+id/editViewAge2" />
+
+            <EditText
+                android:id="@+id/editTextCountry"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:background="@android:color/transparent"
+                android:text="Spain"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewAddress1" />
+
+            <EditText
+                android:id="@+id/editTextCity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:text="Castello"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@+id/textViewAddress1"
+                app:layout_constraintTop_toBottomOf="@+id/textViewAddress1" />
 
             <TextView
                 android:id="@+id/textViewDeliveryRating2"
@@ -179,20 +194,10 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageViewConsumerGood"
                 app:layout_constraintTop_toTopOf="@+id/imageViewConsumerGood"
                 app:srcCompat="@drawable/bad" />
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Castello"
-                app:layout_constraintEnd_toEndOf="@+id/textViewAddress1"
-                app:layout_constraintTop_toBottomOf="@+id/textViewAddress1" />
 
             <TextView
                 android:id="@+id/textView2"
@@ -204,7 +209,24 @@
                 android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewAge" />
+                app:layout_constraintTop_toBottomOf="@+id/editTextCountry" />
+
+            <Button
+                android:id="@+id/buttonEditSave"
+                style="@style/Widget.AppCompat.Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="@color/colorPrimaryDark"
+                android:text="@string/edit"
+                android:textColor="@android:color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageViewConsumerGood" />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
@@ -246,8 +268,6 @@
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
-
-
 
 
 </android.support.constraint.ConstraintLayout>
