--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -71,12 +71,14 @@
             <Button
                 android:id="@+id/buttonAccept"
                 style="@style/Widget.AppCompat.Button"
-                android:layout_width="130dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
                 android:background="@color/colorPrimaryDark"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:text="@string/acceptOrder"
                 android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
