--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -27,13 +27,15 @@
         app:layout_constraintVertical_bias="0.0">
 
         <android.support.constraint.ConstraintLayout
-            android:layout_width="292dp"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <EditText
                 android:id="@+id/editTextConfPass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginEnd="32dp"
                 android:background="@drawable/edit_text_background"
                 android:ems="10"
                 android:hint="@string/confPassword"
@@ -51,6 +53,8 @@
                 android:id="@+id/editTextPass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginEnd="32dp"
                 android:background="@drawable/edit_text_background"
                 android:ems="10"
                 android:hint="@string/password"
@@ -68,7 +72,9 @@
                 android:id="@+id/editTextMail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="50dp"
+                android:layout_marginEnd="32dp"
                 android:background="@drawable/edit_text_background"
                 android:ems="10"
                 android:hint="@string/email"
@@ -85,6 +91,8 @@
                 android:id="@+id/editTextUser"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginEnd="32dp"
                 android:background="@drawable/edit_text_background"
                 android:ems="10"
                 android:hint="@string/username"
