--- a/app/src/main/res/layout/fragment_plans.xml
+++ b/app/src/main/res/layout/fragment_plans.xml
@@ -4,13 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".FragmentPlans">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
-        tools:context=".FragmentOrders">
+        android:background="@color/colorPrimary">
 
 
         <android.support.v7.widget.CardView
