--- a/app/src/main/res/layout/fragment_accepted_orders.xml
+++ b/app/src/main/res/layout/fragment_accepted_orders.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentMyOrders"
+    tools:context=".FragmentAcceptedOrders"
     android:background="@color/colorPrimary">
 
     <ScrollView
-        android:id="@+id/scrollViewMyOrders"
+        android:id="@+id/scrollViewAcceptedOrders"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,25 +17,14 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recViewMyOrders"
+        android:id="@+id/recViewAcceptedOrders"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/scrollViewMyOrders" />
+        app:layout_constraintTop_toTopOf="@+id/scrollViewAcceptedOrders" />
 
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabMyOrders"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:src="@drawable/add"
-        app:backgroundTint="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
