--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -275,7 +275,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@android:color/darker_gray" />
+                    app:srcCompat="@drawable/usuario1" />
 
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.CardView>
